fixed usercard grid design to overlap

--- a/stylesheets/components/_activity-cards.scss
+++ b/stylesheets/components/_activity-cards.scss
@@ -8,6 +8,8 @@ main {
     display: grid;
     // flex-direction: column;
     // align-items: center;
+        grid-auto-rows: minMax(199px, auto);
+        
     justify-content: center;
     grid-gap: 1em;
 }
@@ -20,11 +22,44 @@ width: a.$mobile-card-width;
 height: auto;
 }
 
+// .activity-icon, .activity {
+//     grid-row: 1/2;
+// }
+
+
+
+
+// .activity {
+//     grid-column: 1/2;
+//     grid-row: 2/2;
+// }
+
 .activity-icon {
-    // @include 
-    display: flex;
+    display: grid;
+    grid-column: 1/2;
+    grid-row: 1/3;
+    justify-content: end;
 
 }
+
+.activity-heading {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .ellipses {
+        width: 15px;
+        height: 5px;
+    }
+    .previous-activity {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+}
+
  .card-grid:nth-of-type(1) .activity-icon {
     @include a.iconCard(10px, a.$work-bg);
 }
@@ -50,10 +85,16 @@ height: auto;
    @include a.iconCard(10px, a.$self-care-bg);
     
 }
+.card-grid:nth-of-type(7) .activity-icon {
+    @include a.iconCard(10px, a.$self-care-bg);
+     
+ }
 // .activity-icon:
 
 .activity {
     @include a.activityCard(10px, a.$white, a.$activity-card-dark-blue);
+    grid-column: 1/2;
+    grid-row: 2/2;
 }
 
 // .work {
@@ -76,7 +117,7 @@ height: auto;
 
 // }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 1000px) {
 
     
     .dashboard-grid {
@@ -85,16 +126,38 @@ height: auto;
         // grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-columns: repeat(4,1fr);
         
-        grid-auto-rows: minMax(100px, auto);
-        grid-gap: 2em;
+        grid-auto-rows: minmax(199px, auto);
+        grid-gap: 1em;
         // justify-items: stretch;
         // align-items: stretch;
     }
 
 
-    .card-grid {
-        width: a.$desktop-card-width;
+    .user-img {
+        align-self: none; 
+
     }
+    
+    .activity-heading {
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    
+        .ellipses {
+            width: 15px;
+            height: 5px;
+        }
+        .previous-activity {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+        }
+    
+    }
+    // .card-grid {
+    //     width: a.$desktop-card-width;
+    // }
     
 }
 // .activity div:nth-of-type(2) {
